# pylinks

./: .codacy.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .ruff.toml  .semgrepignore  .travis.yml  Dockerfile  LICENSE.md  Pipfile  Procfile  README.md  app.json  fly.toml  manage.py  pyproject.toml  renovate.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml  dependency-graph.yml  deploy.yml  semgrep.yml
ThreatDragonModels/Heroku/: Heroku.json
linkcheck/: utils.py
pylinks/: dashboard.py  settings.py  urls.py  wsgi.py
pylinks/feeds/: feeds.py  urls.py
pylinks/links/: admin.py  linklists.py  models.py  search_indexes.py  tests.py  urls.py  utils.py  views.py
pylinks/links/less/: links.less
pylinks/links/migrations/: 0001_initial.py  0002_auto_20170703_1843.py  0002_auto__add_field_link_description__add_field_category_description.py  0003_auto_20220904_2045.py  0003_auto__add_field_link_visits.py  0004_alter_link_file.py  0004_auto__add_field_link_file.py  0005_auto__chg_field_link_file.py  0006_auto__chg_field_link_url.py  0007_auto.py  0008_auto__del_field_link_category.py
pylinks/links/static/css/: links.css
pylinks/links/static/js/: uploadcare.js
pylinks/links/templates/links/: alpha.htm  category.htm  links.htm  popular.htm  recent.htm
pylinks/main/: admin.py  context_processors.py  decorators.py  models.py  tests.py  urls.py  views.py
pylinks/main/less/: styles.less
pylinks/main/migrations/: 0001_initial.py
pylinks/main/templates/: 404.html  500.html  alpha_index.htm  base.htm  category_index.htm  index.htm
pylinks/main/templatetags/: analytics.py  captureas.py  columns.py  macros.py  menu_li.py  page_url.py  self_url.py
pylinks/search/: tests.py  urls.py  views.py
(+4 files in other folders)
