[project]
name = "pylinks"
version = "0.1.0"
description = "Searchable database of external links in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url",
    "django",
    "django-grappelli",
    "django-haystack",
    "gunicorn",
    "newrelic",
    "psycopg2-binary",
    "rollbar",
    "whitenoise",
    "whoosh",
]

[tool.uv]
dev-dependencies = [
    "black",
    "ruff",
    "pre-commit",
]
