[project]
name = "pylinks"
version = "0.1.0"
description = "Searchable database of external links in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0,<4",
    "django>=6,<7",
    "django-grappelli>=4,<5",
    "django-haystack>=3.3,<4",
    "gunicorn>=24,<25",
    "newrelic>=11,<12",
    "psycopg2-binary>=2.9,<3",
    "rollbar>=1.3,<2",
    "whitenoise>=6.11,<7",
    "whoosh>=2.7,<3",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
    "pre-commit",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
